getTagsFromStorage may cause acquisitions to become invalid

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Server Security
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In the process of doing SERVER-112058 we discovered that the function wraps every call in a writeConflictRetry loop even if they are exclusively doing reads.

      If the loop were to encounter a write conflict, it would abandon the snapshot and potentially cause an existing collection acquisition to have a stale pointer. This has the potential to result in a system crash or undefined behaviour.

            Assignee:
            Gabriel Marks
            Reporter:
            Jordi Olivares Provencio
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: