SERVER-114536 Remove writeConflictRetry in getTagsFromStorage (#45213)

GitOrigin-RevId: 4e9dbddadb41b926de7bb5b30d95e2d5f812f97f